<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.unifor.programacao.paciente.atividade.PacienteAtividade" >

    <TextView
        android:id="@+id/textViewPnome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextPnome"
        android:layout_alignLeft="@+id/editTextPnome"
        android:layout_marginBottom="39dp"
        android:text="@string/textviewnome" />

    <TextView
        android:id="@+id/textViewPtemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPtemp"
        android:layout_below="@+id/editTextPpressao"
        android:text="@string/textviewtemperatura" />

    <TextView
        android:id="@+id/textViewPintern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPintern"
        android:layout_below="@+id/editTextPtemp"
        android:text="@string/textviewinternacao" />

    <TextView
        android:id="@+id/textViewPsangue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPsangue"
        android:layout_below="@+id/editTextPintern"
        android:text="@string/textviewtiposangue" />

    <EditText
        android:id="@+id/editTextPsangue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonUpd"
        android:layout_alignBottom="@+id/buttonUpd"
        android:ems="10" />

    <EditText
        android:id="@+id/editTextPintern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewPsangue"
        android:layout_alignRight="@+id/buttonUpd"
        android:layout_below="@+id/textViewPintern"
        android:ems="10" />

    <EditText
        android:id="@+id/editTextPtemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPpressao"
        android:layout_alignRight="@+id/buttonUpd"
        android:layout_below="@+id/textViewPtemp"
        android:ems="10" />

    <EditText
        android:id="@+id/editTextPpressao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPbpm"
        android:layout_alignRight="@+id/buttonUpd"
        android:layout_below="@+id/textViewPpressao"
        android:ems="10" />

    <TextView
        android:id="@+id/textViewPpressao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPpressao"
        android:layout_below="@+id/editTextPbpm"
        android:text="@string/textviewpressao" />

    <EditText
        android:id="@+id/editTextPbpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPleito"
        android:layout_alignRight="@+id/buttonUpd"
        android:layout_below="@+id/textViewPbpm"
        android:ems="10" />

    <TextView
        android:id="@+id/textViewPbpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPbpm"
        android:layout_below="@+id/editTextPleito"
        android:text="@string/textviewbpm" />

    <EditText
        android:id="@+id/editTextPleito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPnome"
        android:layout_alignRight="@+id/buttonUpd"
        android:layout_below="@+id/textViewPleito"
        android:ems="10" />

    <TextView
        android:id="@+id/textViewPleito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPleito"
        android:layout_below="@+id/editTextPnome"
        android:text="@string/textviewleito" />

    <EditText
        android:id="@+id/editTextPnome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewPsangue"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/buttonUpd"
        android:layout_marginTop="74dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonUpd"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewPsangue"
        android:text="@string/btnUpdate" />

</RelativeLayout>
