<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.unifor.programacao.paciente.atividade.InformacoesAdicionaisAtividade"
    tools:ignore="TextFields" >

    <TextView
        android:id="@+id/textViewAnome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextAnome"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:text="@string/textAnome"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextAnome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextViewAendereco"
        android:layout_below="@+id/textViewAnome2"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/TextViewAendereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditTextAendereco"
        android:layout_below="@+id/editTextAnome"
        android:text="@string/textAendereco"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/EditTextAendereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextViewAcelular"
        android:layout_below="@+id/TextViewAendereco"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextViewAcelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditTextAcelular"
        android:layout_below="@+id/EditTextAendereco"
        android:text="@string/textAcelular"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/EditTextAcelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextViewAcelular"
        android:layout_marginLeft="14dp"
        android:ems="10" />

    <TextView
        android:id="@+id/TextViewAtelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditTextAcelular"
        android:layout_below="@+id/EditTextAcelular"
        android:text="@string/textAtelefone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/EditTextAtelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextViewAtelefone"
        android:layout_below="@+id/TextViewAtelefone"
        android:ems="10" />

    <TextView
        android:id="@+id/TextViewAemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditTextAtelefone"
        android:layout_below="@+id/EditTextAtelefone"
        android:text="@string/textAemail"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/EditTextAemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextViewAemail"
        android:layout_below="@+id/TextViewAemail"
        android:ems="10"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/textViewAcontato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditTextAemail"
        android:layout_below="@+id/EditTextAemail"
        android:text="@string/textAcontato"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextAcontato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewAcontato"
        android:layout_below="@+id/textViewAcontato"
        android:ems="10" />

    <Button
        android:id="@+id/btnSalvarAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textViewAnome2"
        android:text="@string/btnAsalvar" />

</RelativeLayout>